--- a/apps/styled-jsx/package.json
+++ b/apps/styled-jsx/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "web",
+  "name": "styled-jsx",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3002",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "clsx": "^1.2.1",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "ui": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
+    "@types/node": "^18.7.8",
+    "@types/react": "18.0.17",
     "eslint": "7.32.0",
+    "eslint-config-custom": "workspace:*",
     "next-transpile-modules": "9.0.0",
     "tsconfig": "workspace:*",
-    "@types/node": "^17.0.12",
-    "@types/react": "17.0.48",
-    "typescript": "^4.5.3"
+    "typescript": "^4.7.4"
   }
 }
